# convert2md

./: .gitignore  buildozer.spec  convert2md.py  gui.py  main.py  make_logo.py  pyproject.toml  requirements.txt  web_app.py
.buildozer/: state.db
.github/workflows/: build-apk.yml
convert2md.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
static/: manifest.json
templates/: ad.html  index.html
