[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "convert2md"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pymupdf4llm",
    "mammoth",
    "html2text",
    "openpyxl",
    "python-pptx",
    "watchdog",
]

[project.scripts]
convert2md = "convert2md:main"

[tool.setuptools]
py-modules = ["convert2md"]
